syntax = "proto3";

                 package playerchoiceResponseReward;
service PlayerchoiceResponseRewardService {
 rpc createPlayerchoiceResponseReward (PlayerchoiceResponseRewardCreateInput) returns (PlayerchoiceResponseReward) {}
rpc playerchoiceResponseRewards (findManyParams) returns (stream PlayerchoiceResponseReward) {}
rpc playerchoiceResponseReward (PlayerchoiceResponseRewardWhereUniqueInput) returns (PlayerchoiceResponseReward) {}
rpc updatePlayerchoiceResponseReward (PlayerchoiceResponseRewardUpdateInput) returns (PlayerchoiceResponseReward) {}
rpc deletePlayerchoiceResponseReward (PlayerchoiceResponseRewardWhereUniqueInput) returns (PlayerchoiceResponseReward) {} 
 }
message PlayerchoiceResponseRewardCreateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayerchoiceResponseReward {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayerchoiceResponseRewardWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayerchoiceResponseRewardUpdateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message findManyParams {

};